# ftp_loader

./: pyproject.toml
ftp_loader/: config.py  main.py
