[tool.poetry]
name = "ftp-loader"
version = "0.1.0"
description = ""
authors = ["Arkptz <arkptz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
mypy = "^1.8.0"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"

[tool.poetry.scripts]
start = "ftp_loader.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
